<resources>
    <string name="app_name">MyUniApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="preference_file_key">preferences-file-task-planner</string>
    <string name="invalid_email">Invalid email</string>
    <string name="password_empty_error">\"Password cannot be empty\"</string>
    <string name="login_failed_error">\"Login Failed...\"</string>
    <string name="something_went_wrong">\"Something went wrong in our end...\"</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="menu_mapa">Mapa</string>
    <string name="menu_noticias">Noticias</string>
    <string name="menu_post_noticia">Publicar Noticia</string>
    <string name="menu_kioskos">Kioskos</string>
    <string name="menu_sitio">Sitio</string>
</resources>
