<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mapa"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/menu_mapa" />
        <item
            android:id="@+id/nav_noticias"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/menu_noticias" />
        <item
            android:id="@+id/nav_postnew"
            android:icon="@drawable/ic_web_black_24dp"
            android:title="@string/menu_post_noticia" />
        <item
            android:id="@+id/nav_kioskos"
            android:icon="@drawable/ic_restaurant_black_24dp"
            android:title="@string/menu_kioskos" />
        <item
            android:id="@+id/nav_sitio"
            android:icon="@drawable/ic_mail_black_24dp"
            android:title="@string/menu_sitio" />
    </group>
</menu>
